samples/_failures_safe/1761423185_244dfc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d47075fb.c: In function ‘main’:
./samples/SAFE/__tmp_d47075fb.c:161:5: error: expected declaration or statement at end of input
  161 |     input[strcspn(input, "\n")] = '\0';
      |     ^~~~~
